[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
rodio = "0.19.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
database = { path = "./database" }
metadata = { path = "./metadata" }
analysis = { path = "./analysis" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = "1.0.204"
serde_json = "1.0.120"
clap = "4.5.9"
pathdiff = "0.2.1"
