# This file is used for telling Rust-related tools
# where various Rust crates are.
# This also unifies `./target` output folder and
# various Rust configurations.

[workspace]
members = ["./native/*", "./cli", "tag-editor", "discovery"]
resolver = "2"

[patch.crates-io]
core-graphics = { path = "./core-graphics" }
