# This file is used for telling Rust-related tools
# where various Rust crates are.
# This also unifies `./target` output folder and
# various Rust configurations.

[workspace]
members = ["native/hub", "native/requests", "cli", "tag-editor", "discovery", "sync", "fsio", "fsio-media-source", "playback", "http-request"]
resolver = "2"

[patch.crates-io]
core-graphics = { path = "./core-graphics" }
