[package]
name = "analysis"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "analysis"
path = "src/lib.rs"

[features]
bench = []

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "analysis_benchmark"
harness = false

[dependencies]
anyhow = {version="1.0.98",  features = ["backtrace"] }
lazy_static = "1.5.0"
log = "0.4.22"
rubato = "0.16.1"
rustfft = "6.2.0"
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
wgpu = "23.0.0" 
pollster = "0.4.0"
bytemuck = "1.19.0"
num-complex = { version = "0.4.6", features = ["bytemuck"] }
futures = "0.3.31"
tokio-util = "0.7.11"
rand = "0.8.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
realfft = "3.4.0"
cfg-if = "1.0.0"
fsio = { version = "0.1.0", path = "../fsio" }
fsio_media_source = { version = "0.1.0", path = "../fsio-media-source" }
