[package]
name = "rune-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "rune"
path = "src/lib.rs"

[dependencies]
futures = "0.3.30"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
database = { path = "../database" }
metadata = { path = "../metadata" }
analysis = { path = "../analysis" }
playback = { path = "../playback" }
tracing-subscriber = "0.3.20"
tracing = "0.1.40"
serde = "1.0.219"
serde_json = "1.0.140"
clap = "4.5.9"
pathdiff = "0.2.1"
prettytable = "0.10.0"
dunce = "1.0.4"
log = "0.4.22"
rust_decimal = "1.36.0"
fsio = { version = "0.1.0", path = "../fsio" }
directories = "6.0.0"
uuid = { version = "1.18.0", features = ["v4"] }
