[package]
name = "database"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4.22" }
sea-orm = { version="0.12.15", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "debug-print" ] }
sea-orm-migration = "0.12.15"
async-graphql = "7.0.6"
migration = { path = "../migration" }
metadata = { path = "../metadata" }
analysis = { path = "../analysis" }
futures = "0.3.30"
tokio = "1.38.0"
arroy = "0.4.0"
heed = "0.20.3"
rand = "0.8.5"
dunce = "1.0.4"
async-channel = "2.3.1"
deunicode = "1.6.0"
paste = "1.0.15"
chrono = "0.4.38"
tantivy = "0.22.0"
tokio-util = "0.7.11"
anyhow = {version="1.0.86",  features = ["backtrace"] }
rayon = "1.10.0"
seq-macro = "0.3.5"
