[package]
name = "database"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4.22" }
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
    "debug-print",
] }
sea-orm-migration = "1.1.0"
serde = "1.0.219"
serde_json = "1.0.140"
migration = { path = "../migration" }
metadata = { path = "../metadata" }
analysis = { path = "../analysis" }
playback = { path = "../playback" }
tag-editor = { path = "../tag-editor" }
sync = { path = "../sync" }
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["fs"] }
arroy = "0.6.2"
heed = "0.22.0"
rand = "0.8.5"
async-channel = "2.3.1"
deunicode = "1.6.0"
paste = "1.0.15"
chrono = "0.4.38"
tokio-util = "0.7.11"
anyhow = { version = "1.0.98", features = ["backtrace"] }
rayon = "1.10.0"
seq-macro = "0.3.5"
once_cell = "1.19.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
windows = { version = "0.58.0", features = [
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }
async-trait = "0.1.83"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v5", "v4"] }
regex = "1.11.1"
tempfile = "3.17.1"
axum = { version = "0.8.2", features = ["tokio"] }
reqwest = "0.12.18"
fsio = { version = "0.1.0", path = "../fsio" }
http-request = { version = "0.1.0", path = "../http-request" }
discovery = { version = "0.1.0", path = "../discovery" }

[dev-dependencies]
hyper = "1.6.0"
portpicker = "0.1.1"
env_logger = "0.11.8"
