[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[lib]
name = "discovery"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
axum = "0.8.2"
axum-server = "0.7.1"
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
netdev = "0.32.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_urlencoded = "0.7.1"
socket2 = "0.5.8"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["cors", "limit"] }
uuid = { version = "1.12.1", features = ["v4"] }

[dev-dependencies]
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.8.5"
