[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[lib]
name = "discovery"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
axum = "0.8.2"
hyper = "1.6.0"
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
log = "0.4.25"
netdev = "0.32.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
once_cell = "1.20.2"
pem = "3.0.4"
rcgen = "0.13.2"
reqwest = { version = "0.12.12", features = ["json"] }
rsa = "0.9.7"
rustls = { version = "0.23.23", features = ["ring"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
socket2 = "0.5.8"
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal", "fs"] }
tokio-util = "0.7.13"
toml = "0.8.19"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["cors", "limit"] }
uuid = { version = "1.12.1", features = ["v4"] }
webpki-roots = "0.26.8"
x509-parser = "0.17.0"
rand = "0.8.0"
bincode = "1.3.3"
tokio-rustls = { version = "0.26.1", features = ["logging", "tls12"], default-features = false }
http-body-util = "0.1.2"
hyper-util = "0.1.10"
colored = "3.0.0"
http-body = "1.0.1"
notify = "8.0.0"
dashmap = "6.1.0"

[dev-dependencies]
clearscreen = "4.0.1"
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.8.5"
