[package]
name = "metadata"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "metadata"
path = "src/lib.rs"

[dependencies]
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
thiserror = "1.0.61"
lazy_static = "1.5.0"
walkdir = "2.5.0"
log = "0.4.22"
lofty = "0.21.1"
regex = "1.10.6"
analysis = { path = "../analysis" }
anyhow = {version="1.0.98",  features = ["backtrace"] }
image = "0.25.2"
palette_extract = "0.1.0"
fsio = { version = "0.1.0", path = "../fsio" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"

