[package]
name = "playback"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "playback"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4.22" }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["sync", "time", "macros"] }
rodio = { version = "0.19.0", features = [] }
rustfft = "6.2.0"
tokio-util = "0.7.11"
rand = "0.8.5"
souvlaki = "0.7.3"
anyhow = "1.0.89"
raw-window-handle = "0.5.2"
windows = {version = "0.44.0", features = ["Win32_System_LibraryLoader", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
