[package]
name = "playback"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "playback"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4.22" }
futures = "0.3.30"
tokio = { version = "1.40.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
    "rt",
] }
rodio = { version = "0.20.1", default-features = false, features = [
    "vorbis",
    "symphonia-wav",
    "symphonia-mp3",
    "symphonia-aac",
    "symphonia-aiff",
    "symphonia-alac",
    "symphonia-flac",
    "symphonia-isomp4",
] }
rustfft = "6.2.0"
tokio-util = "0.7.11"
rand = "0.8.5"
anyhow = "1.0.98"
raw-window-handle = "0.5.2"
windows = { version = "0.44.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
once_cell = "1.20.2"
simple_channel = { path = "../simple-channel" }
url = "2.5.7"
stream-download = "0.22.4"
symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats"] }

[target.'cfg(not(any(target_os = "android")))'.dependencies]
souvlaki = { git = "https://github.com/Losses/souvlaki", rev = "e60e9b9a6a2774306718a0c561609083f1acc617", default-features = false, features = [
    "use_zbus",
] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.21.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
tracing-logcat = "0.1.0"
ndk-saf = { git = "https://github.com/Losses/Rust-SAF", version = "0.1.8" }
