[package]
name = "scrobbling"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "scrobbling"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
md5 = "0.7.0"
reqwest = { version = "0.12.9", features = ["blocking", "json", "socks"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.42.0" }
simple_channel = { path = "../simple-channel" }
log = "0.4.22"

[dev-dependencies]
clap = "4.5.9"
rand = "0.8.5"
