[package]
name = "sync"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "sync"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
blake3 = "1.7.0"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde"] }
sea-orm = "1.1.0"
lazy_static = "1.5.0"
serde_json = "1.0.140"
chrono = "0.4.40"
log = "0.4.27"
tokio = "1"
once_cell = "1.21.3"
async-trait = "0.1.88"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin)'] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
    "debug-print",
] }
uuid = { version = "1.16.0", features = ["v4"] }
