[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.15.0"
prost = "0.12.6"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
sea-orm = "0.12.15"
database = { path = "../../database" }
playback = { path = "../../playback" }
lazy_static = "1.5.0"
dunce = "1.0.4"
log = "0.4.22"
tracing-subscriber = "0.3.18"
paste = "1.0.15"
tokio-util = "0.7.11"
num_cpus = "1.16.0"
anyhow = { version = "1.0.89", features = ["backtrace"] }
futures = "0.3.30"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
# wasm-bindgen = "0.2.92"
